--- a/install
+++ b/install
@@ -1,166 +1,50 @@
-#!/usr/bin/env bash
-# Make install script robust for both vscode and root users; configure brew shellenv for bash/zsh;
-# non-interactive chezmoi apply; avoid hardcoded paths
+#!/bin/bash
 
-set -euo pipefail
+# -e: exit on error
+# -u: exit on unset variables
+set -eu
 
-# Detect platform
-OS="$(uname -s)"
+if [[ "$(uname -s)" == "Darwin" ]]; then
+    echo "Running on MacOS"
+    HOMEBREW_PREFIX="/opt/homebrew"
+else
+    echo "Running on Linux"
+    HOMEBREW_PREFIX="/home/linuxbrew/.linuxbrew"
+fi
 
-# Detect current user and home
-USER_NAME="$(id -un)"
-USER_HOME="${HOME}"
+if command -v brew >/dev/null; then
+    echo "brew is already installed"
+else
+    NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 
-# Utilities
-have() { command -v "$1" >/dev/null 2>&1; }
+    (
+        echo
+        echo "eval "$("$HOMEBREW_PREFIX/bin/brew" shellenv)""
+    ) >>"$HOME"/.bashrc
+    eval "$("$HOMEBREW_PREFIX/bin/brew" shellenv)"
+fi
 
-apt_install() {
-  local pkgs=("$@")
-  if have apt-get; then
-    if have sudo && [ "$(id -u)" -ne 0 ]; then
-      sudo apt-get update -y
-      sudo apt-get install -y "${pkgs[@]}"
+if ! chezmoi="$(command -v chezmoi)"; then
+    bin_dir="${HOME}/.local/bin"
+    chezmoi="${bin_dir}/chezmoi"
+    echo "Installing chezmoi to '${chezmoi}'" >&2
+    if command -v curl >/dev/null; then
+        chezmoi_install_script="$(curl -fsSL https://chezmoi.io/get)"
+    elif command -v wget >/dev/null; then
+        chezmoi_install_script="$(wget -qO- https://chezmoi.io/get)"
     else
-      apt-get update -y || true
-      apt-get install -y "${pkgs[@]}"
-    fi
-  fi
-}
-
-# Configure Homebrew for current user without hardcoding paths
-configure_brew() {
-  local brew_bin=""
-  local hb_prefix=""
-
-  if [ "$OS" = "Darwin" ]; then
-    # Apple Silicon default
-    hb_prefix="/opt/homebrew"
-    if [ -x "$hb_prefix/bin/brew" ]; then
-      brew_bin="$hb_prefix/bin/brew"
-    elif have brew; then
-      brew_bin="$(command -v brew)"
-    fi
-    # If brew not present, install macOS Homebrew
-    if [ -z "$brew_bin" ]; then
-      NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-      if [ -x "$hb_prefix/bin/brew" ]; then
-        brew_bin="$hb_prefix/bin/brew"
-      elif have brew; then
-        brew_bin="$(command -v brew)"
-      fi
-    fi
-  else
-    # Linuxbrew default
-    hb_prefix="/home/linuxbrew/.linuxbrew"
-    if [ -x "$hb_prefix/bin/brew" ]; then
-      brew_bin="$hb_prefix/bin/brew"
-    elif have brew; then
-      brew_bin="$(command -v brew)"
-    fi
-    # If brew not present, install Linuxbrew
-    if [ -z "$brew_bin" ]; then
-      NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-      if [ -x "$hb_prefix/bin/brew" ]; then
-        brew_bin="$hb_prefix/bin/brew"
-      elif have brew; then
-        brew_bin="$(command -v brew)"
-      fi
-    fi
-  fi
-
-  # If we now have brew, set up shellenv and rc files
-  if [ -n "$brew_bin" ]; then
-    # Make current shell aware for subsequent steps
-    eval "$("$brew_bin" shellenv)"
-
-    local shellenv_eval='eval "$('"$brew_bin"' shellenv)"'
-
-    # Update bashrc
-    if [ -f "$USER_HOME/.bashrc" ] || [ "${SHELL##*/}" = "bash" ]; then
-      if ! grep -qs 'brew shellenv' "$USER_HOME/.bashrc"; then
-        echo >> "$USER_HOME/.bashrc"
-        echo "$shellenv_eval" >> "$USER_HOME/.bashrc"
-      fi
-    fi
-
-    # Update zshrc
-    if [ -f "$USER_HOME/.zshrc" ] || [ "${SHELL##*/}" = "zsh" ]; then
-      if ! grep -qs 'brew shellenv' "$USER_HOME/.zshrc"; then
-        echo >> "$USER_HOME/.zshrc"
-        echo "$shellenv_eval" >> "$USER_HOME/.zshrc"
-      fi
-    fi
-
-    # Base toolchain on Linux
-    if [ "$OS" != "Darwin" ]; then
-      apt_install build-essential || true
-      "$brew_bin" install gcc || true
-    fi
-  fi
-}
-
-# Ensure chezmoi available; install if missing without hardcoding paths
-ensure_chezmoi() {
-  if ! have chezmoi; then
-    # Try Homebrew if available
-    if have brew; then
-      brew install chezmoi
-    elif [ -x "/home/linuxbrew/.linuxbrew/bin/brew" ]; then
-      /home/linuxbrew/.linuxbrew/bin/brew install chezmoi
-    else
-      # Fallback to official script to user's local bin
-      local bin_dir="$USER_HOME/.local/bin"
-      mkdir -p "$bin_dir"
-      if have curl; then
-        sh -c "$(curl -fsLS get.chezmoi.io)" -- -b "$bin_dir"
-      elif have wget; then
-        sh -c "$(wget -qO- get.chezmoi.io)" -- -b "$bin_dir"
-      else
-        echo "chezmoi install requires curl or wget" >&2
+        echo "To install chezmoi, you must have curl or wget installed." >&2
         exit 1
-      fi
-      export PATH="$bin_dir:$PATH"
     fi
-  fi
-}
+    sh -c "${chezmoi_install_script}" -- -b "${bin_dir}"
+    unset chezmoi_install_script bin_dir
+fi
 
-# Apply dotfiles non-interactively
-apply_dotfiles() {
-  # Resolve source dir:
-  # 1) Use the directory containing this script (common chezmoi pattern)
-  # 2) Else use $HOME/dotfiles if present
-  # 3) Else fall back to default chezmoi source
-  local script_path
-  script_path="$(command -v -- "$0")"
-  local script_dir
-  script_dir="$(cd -P -- "$(dirname -- "$script_path")" && pwd -P)"
+# POSIX way to get script's dir: https://stackoverflow.com/a/29834779/12156188
+script_dir="$(cd -P -- "$(dirname -- "$(command -v -- "$0")")" && pwd -P)"
 
-  local source_dir="$script_dir"
-  if [ ! -d "$source_dir" ] || [ ! -f "$source_dir/README.md" ] && [ ! -d "$source_dir/.git" ]; then
-    if [ -d "$USER_HOME/dotfiles" ]; then
-      source_dir="$USER_HOME/dotfiles"
-    else
-      source_dir="$USER_HOME/.local/share/chezmoi"
-    fi
-  fi
+set -- init --apply --source="${script_dir}"
 
-  # Initialize and apply without prompts; prefer repo on conflicts
-  # Note: chezmoi init will set the source but not fail if already initialized
-  if have chezmoi; then
-    chezmoi init --source="$source_dir" || true
-    chezmoi apply --force
-  else
-    echo "chezmoi not found after installation step" >&2
-    exit 1
-  fi
-}
-
-main() {
-  configure_brew
-  ensure_chezmoi
-  apply_dotfiles
-
-  echo "Bootstrap completed for user '$USER_NAME' on '$OS' with HOME '$USER_HOME'."
-}
-
-main "$@"
+echo "Running 'chezmoi $*'" >&2
+# exec: replace current process with chezmoi
+exec "$chezmoi" "$@"
